client/css/main.css
body {
	margin: 6px;
	font-family: "Lato", sans-serif;
	background-color: lightyellow;
}

#content {
	white-space: nowrap;
}

input {
	width: 160px;
}

.chess-board {
	width: 400px;
}

.chess-board img {
	cursor: pointer;
}

.dialog {
	white-space: initial;
	position: absolute;
	top: 110px;
	left: 154px;
	z-index: 100;
	width: 100px;
	background-color: #fdcc05;
	border-width: 4px;
	border-style: double;
	border-radius: 8px;
	border-color: black;
	padding: 8px;
	text-align: center;
	min-width: 200px;
	box-shadow: 0px 0px 20px 4px #222;
}

@media only screen and (max-width: 640px) {
	.dialog {
		left: calc(50% - 130px);
	}
}

#promotion-dialog {
	left: 440px;
	top: 180px;
	font-weight: bold;
}

@media only screen and (max-width: 640px) {
	#promotion-dialog {
		left: calc(50% - 40px);
		min-width: 80px;
	}
}

#promotion-dialog img {
	cursor: pointer;
}

#promotion-dialog img:hover {
	background-color: white;
}

#overlay {
	z-index: 20;
	position: absolute;
	top: 0px;
	left: 0px;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.4);
}

.button {
	cursor: pointer;
	text-align: center;
	padding: 4px;
	background-color: #e32129;
	color: white;
	border-radius: 8px;
	font-weight: bold;
	border-width: 2px;
	border-style: solid;
	border-color: #222;
	box-shadow: 8px 8px 8px #666;
	max-width: 120px;
}

.button img {
	height: 24px;
}

.button:hover {
	color: black;
	background-color: white;
	border-width: 2px;
	border-color: #e32129;
}

#header {
	border-radius: 8px;
	margin-bottom: 6px;
	padding-left: 6px;
	padding-right: 6px;
	background-color: #fdcc05;
	border-width: 2px;
	border-style: solid;
	border-color: black;
}

#header-left {
	vertical-align: top;
	display: inline-block;
	width: calc(100% - 180px);
}

#header-right {
	vertical-align: top;
	display: inline-block;
	text-align: right;
	width: 160px;
}

#header-right .button {
	margin-top: 8px;
	max-width: 160px;
}

#login-dropdown-list {
	left: -50vw;
	top: 40px;
	border-radius: 12px;
	border-style: double;
	border-width: 6px;
	border-color: black;
	box-shadow: 12px 12px 12px #666;
}

#header-text {
	vertical-align: top;
	display: inline-block;
	margin-left: 8px;
	width: calc(100% - 140px);
}

#header-title {
	font-size: 32px;
	font-weight: bold;
}

#need-to-sign-in {
	text-align: center;
}

#need-to-sign-in .button {
	margin: 16px;
	margin-left: 30px;
}

#spinner {
	position: absolute;
	z-index: 300;
}

#spinner img {
	position: absolute;
	z-index: 400;
	width: 300px;
	left: calc(50vw - 150px);
	top: 200px;
}

#message {
	white-space: initial;
	z-index: 120;
	width: 400px;
	line-height: 24px;
}

@media only screen and (max-width: 640px) {
	#message {
		width: calc(100% - 80px);
		left: calc(50% - 180px);
	}
}

#message-text {
	text-align: center;
	margin: 12px;
}

#message-text br {
	line-height: 36px;
}

#message-ok-button {
	margin-left: 140px;
}

@media only screen and (max-width: 640px) {
	#message-ok-button {
		margin-left: calc(50% - 66px);
	}
}

#clock {
	background-color: #fdcc05;
	width: 380px;
	text-align: center;
	font-weight: bold;
	margin: 4px;
	padding: 4px;
	border-radius: 4px;
}

#players {
	display: inline-block;
	vertical-align: top;
}

#players table {
	width: 100%;
	margin-bottom: 22px;
}

#players th {
	background-color: #fdcc05;
}

#players .data-row:hover {
	color: white;
	background-color: #e32129;
}

#board-container {
	display: inline-block;
	max-width: 400px;
}

.players-table-container {
	max-height: 200px;
	overflow-y: auto;
	min-width: 502px;
}

.team-header {
	background-color: #fdcc05;
	font-size: 18px;
	font-weight: bold;
}

.team-header img {
	height: 30px;
	margin-left: 8px;
	margin-right: 2px;
	position: relative;
	top: 4px;
}

.hidden {
	display: none;
}

#username-dialog {
	top: 110px;
	left: calc(100% - 420px);
	width: 300px;
}

@media only screen and (max-width: 640px) {
	#username-dialog {
		left: calc(50% - 170px);
	}
}

#signin-dialog {
	top: 160px;
	left: calc(100% - 420px);
	width: 300px;
}

@media only screen and (max-width: 640px) {
	#signin-dialog {
		top: 60px;
		left: calc(50% - 170px);
	}
}

#or {
	margin: 20px;
	font-weight: bold;
}

#signin-dialog th {
	text-align: right;
	padding-right: 8px;
}

#signin-dialog .button {
	margin-left: calc(50% - 80px);
}

#username-dialog .button {
	margin-left: calc(50% - 80px);
}

#profile-header {
	background-color: #fdcc05;
	padding: 4px;
	font-weight: bold;
	font-size: 22px;
	width: 98%;
}

#profile-data th {
	text-align: right;
}

#profile-data div {
	display: inline-block;
}

#profile-data .button {
	margin-left: 12px;
	min-width: 100px;
}

@media only screen and (max-width: 640px) {
	#profile-data .button {
		margin-top: 8px;
	}
}

.invalid {
	background-color: #f44;
}

#header-logo {
	cursor: pointer;
	width: 80px;
	border-radius: 16px;
	margin-top: 6px;
}

@media only screen and (max-width: 640px) {
	#header-logo {
		width: 40px;
		border-radius: 8px;
	}
}

#waiting {
	margin: 40px;
	padding: 40px;
	border-color: black;
	border-width: 2px;
	border-style: double;
	border-radius: 8px;
	font-size: 24px;
	text-align: center;
	background-color: #fdcc05;
	line-height: 42px;
}

@media only screen and (max-width: 640px) {
	#waiting {
		white-space: normal;
		line-height: 32px;
		padding: 18px;
	}
}

#pass-or-ignore-button {
	width: 100px;
	margin-left: calc(100% - 224px);
	display: inline-block;
	margin-top: 12px;
	margin-bottom: 12px;
}

@media only screen and (max-width: 640px) {
	#pass-or-ignore-button {
		margin-left: calc(100% - 270px);
	}
}

#game-id {
	display: inline-block;
	width: 100px;
}

.signin-button {
	max-width: 240px !important;
	margin-left: calc(50% - 120px) !important;
	margin-bottom: 16px;
}

.signin-button img {
	background-color: white;
	padding: 4px;
	margin-left: 12px;
	border-radius: 20px;
}

.signin-button-text {
	display: inline-block;
	vertical-align: top;
	padding-top: 8px;
}

#header-menu {
	background-color: #e32129;
	width: calc(100% + 12px);
	position: relative;
	left: -6px;
}
/* ... */

